Fixing font sizes, alignment, active link,

--- a/style.css
+++ b/style.css
@@ -64,10 +64,12 @@
 	line-height: 40px;
 	text-transform: uppercase;
 	color: #fff;
+	font-size: 12px;
 	}		
 
 #org-title 	{
 /*	margin: 0 0 0 200px; */
+	
 	position: absolute;
     top: 0;
     left: 225px;
@@ -92,13 +94,15 @@
 
 .header-logo {
 	background-color: #000;
-	position: relative;
+	position: relative; 
 	height: 118px;
+	
 	}
 .header-logo img { /* use as wordpress setting - may need to change*/
-	display: block;
-    margin: auto;
+	display: inline-block;
+    margin: 0 auto;
 	
+	min-height: 100%;
 	}	
 /*	
 .header-logo:before, .header-logo:after {
@@ -153,7 +157,11 @@
 .events-nav a:hover {
 	background-color: #999;
 	}
-		
+
+.current_page_item {
+	background-color: #999;	
+	}
+			
 .active {
 	background-color: #999;	
 }
@@ -187,7 +195,7 @@
 .events-frontpage-content {
 	text-align:center;
 /*	display:inline-block; */
-	height: 65vh;
+	height: 70vh;
 	
 	}
 
